--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.7",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-datepicker": "^7.4.0",
